FinalProj/src/objects/Question__c.object
<CustomObject>
    <fields>
        <fullName>Question_Text__c</fullName>
        <label>Question Text</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Required_Question__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Right_Answer__c</fullName>
        <label>Right Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Question</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <recordTypes>
        <fullName>Multiple_Choise</fullName>
        <active>true</active>
        <label>Multiple Choise</label>
    </recordTypes>
    <recordTypes>
        <fullName>Yes_No_Question</fullName>
        <active>true</active>
        <label>Yes/No Question</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>